@@ -11,6 +11,7 @@
  * Gossiper#isEnabled is not thread safe (CASSANDRA-11116)
  * Avoid major compaction mixing repaired and unrepaired sstables in DTCS (CASSANDRA-11113)
  * test_bulk_round_trip_blogposts is failing occasionally (CASSANDRA-10938)
+ * Fix streaming_socket_timeout_in_ms not enforced (CASSANDRA-11286)
 
 
 2.1.13
